--- a/style.css
+++ b/style.css
@@ -13,21 +13,37 @@ body {
     text-align: center;
     height: 100vh;
     color: rgb(28, 28, 58);
+    background-size: 100%;
 }
 
 #time {
-    font-size: 6rem;
+    font-size: 8rem;
+    font-weight: 100;
+    letter-spacing: 10px;
+}
+
+#date {
+    margin-bottom: 10px;
+    opacity: 0.5;
+
+
 }
 
 h1 {
     margin-bottom: 20px;
-    font-size: 2rem;
+    font-size: 3rem;
+    font-weight: 100;
+    opacity: 0.8;
+
+
 }
 
 h2 {
     margin-bottom: 20px;
-    font-size: 1rem;
+    font-size: 1.5rem;
     opacity: 0.6;
+    font-weight: 100;
+
 }
 
 @media (max-width: 768px) {
