--- a/style.css
+++ b/style.css
@@ -1,55 +1,48 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    font-family: 'Quicksand', sans-serif;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    height: 100vh;
-    color: rgb(70, 70, 70);
-    background-size: 100%;
+  font-family: "Quicksand", sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  height: 100vh;
+  color: rgb(70, 70, 70);
+  background-size: 100%;
 }
 
 #time {
-    font-size: 8rem;
-    font-weight: 100;
-    letter-spacing: 10px;
+  font-size: 8rem;
+  font-weight: 100;
+  letter-spacing: 10px;
 }
 
 #date {
-    margin-bottom: 10px;
-    opacity: 0.5;
-
-
+  margin-bottom: 10px;
+  opacity: 0.5;
 }
 
 h1 {
-    margin-bottom: 20px;
-    font-size: 4rem;
-    font-weight: 100;
-    opacity: 0.8;
-
-
+  margin-bottom: 20px;
+  font-size: 4rem;
+  font-weight: 100;
+  opacity: 0.8;
 }
 
 h2 {
-    margin-bottom: 20px;
-    font-size: 1.5rem;
-    opacity: 0.9;
-    font-weight: 300;
-
-
+  margin-bottom: 20px;
+  font-size: 1.5rem;
+  opacity: 0.9;
+  font-weight: 300;
 }
 
 @media (max-width: 768px) {
-    #time {
-        font-size: 4rem;
-    }
+  #time {
+    font-size: 4rem;
+  }
 }
-
